// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Basic 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-32"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
            disabled={false}
            id="input-33"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Disabled 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-stretch right-icon disabled"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-34"
            aria-disabled={true}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
            disabled={true}
            id="input-35"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Dynamic 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-36"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input with-icon-button input-stretch right-icon clear-not-visible"
            disabled={false}
            id="input-37"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={false}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Dynamic Width 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-38"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
            disabled={false}
            id="input-39"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Filterable 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-40"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input with-icon-button input-stretch right-icon clear-not-visible"
            disabled={false}
            id="input-41"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={false}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Multiple 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-42"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input with-icon-button input-stretch right-icon clear-not-visible"
            disabled={false}
            id="input-43"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={false}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Multiple With No Filter 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-44"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input with-icon-button input-stretch right-icon clear-not-visible"
            disabled={false}
            id="input-45"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Options Disabled 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-46"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
            disabled={false}
            id="input-47"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select With Clear 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-48"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input with-icon-button input-stretch right-icon clear-not-visible"
            disabled={false}
            id="input-49"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select With Default Value 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-50"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
            disabled={false}
            id="input-51"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
